syntax = "proto3";

package com.grpcproject.smartfarm;

option java_multiple_files = false;
option java_package = "com.grpcproject.smartfarm.EquipControlService";
option java_outer_classname = "EquipControlServiceProto";

service EquipControlService{
  rpc equipPowerControl(EquipPowerReq) returns (EquipPowerRes);
  rpc equipStatus(EquipStatusReq) returns (EquipStatusRes);
}

message EquipPowerReq{
  string equipName = 1; // send equip name, then sever will change the power status
}

message EquipPowerRes{
  string equipPowerStatus = 1; // response success sentence
}

message EquipStatusReq{
  string equipStatusRequest = 1; // send the equip name that want to check status
}

message EquipStatusRes{
  int32 equipStatusCode = 1;// response equip status, 1 is power on and 0 is power off

}