syntax = "proto3";

package com.grpcproject.smartfarm;

option java_multiple_files = false;
option java_package = "com.grpcproject.smartfarm.SensorDataCollectService";
option java_outer_classname = "SensorDataCollectServiceProto";

service SensorDataCollectService{
  rpc saveSensorData(stream SaveSensorDataReq) returns (SaveSensorDataRes);
}

message SaveSensorDataReq {
  int32 soilTemp = 1;
  int32 soilHumidity = 2;
}

message SaveSensorDataRes{
  string response = 1;
}